Created UI elements and List View. Added Data models and Database code and structure.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Assignment</string>
+    <string name="factImageDescription">articleImage</string>
+    <string name="imageMore">More</string>
+    <string name="default_title">No title</string>
+    <string name="default_description">No description available</string>
+    <string name="network_error">No Internet Connection</string>
+    <string name="error">Something went wrong :(</string>
+    <string name="retry">Retry</string>
+    <string name="loading">Loading…</string>
 </resources>
