--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="error">Something went wrong :(</string>
     <string name="retry">Retry</string>
     <string name="loading">Loading…</string>
+    <string name="no_internet">No Internet Connection</string>
 </resources>
